--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,39 @@
+# Python virtual environments
+.venv
+.venv/
 venv/
+env/
+ENV/
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+build/
+dist/
+*.egg-info/
+
+# Virtual environment and IDE files
+.venv/
+venv/
+ENV/
+env/
+.mypy_cache/
+.pytest_cache/
+.vscode/
+*.log
+
+# FAISS index and mapping files (generated)
 faiss_index.bin
 filepaths.txt
-__pycache__/
+
+# Model cache / transformer downloads (huggingface)
+transformers_cache/
+cache/
+~/.cache/huggingface
+
+# OS files
+.DS_Store
+Thumbs.db
